--- a/src/Joke.css
+++ b/src/Joke.css
@@ -1,20 +1,23 @@
 .Joke{
     display: flex;
-    margin: -1.8rem 1rem;
+    padding: -1.8rem 1rem;
+    border-bottom: 1px solid rgb(214, 214, 214);
 }
 .Joke-VoteArea{
     display: flex;
     align-items: center;
     margin-right: 1rem;
+    margin-left: 1.8rem;
 }
 .Joke-VoteArea .fas{
     font-size: 1.4em;
+    color: #828282;
 }
 .Joke-VoteArea .fas:hover{
     cursor: pointer;
 }
 .circle {
-    background: lightblue;
+    background: rgb(250, 250, 250);
     border-radius: 50%;
     width: 45px;
     height: 45px;
@@ -22,11 +25,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: 0px 4px 9px 0px #c4c4c4, 0px 7px 13px 6px #e0e0e0;
 }
 .Joke-Text{
+    width: 75%;
     margin: auto;
+    color: #7a7a7a;
+    font-weight: 500;
 }
 .Joke-Emoji{
-    font-size: 3rem;
-    margin-left: 1rem;
+    font-size: 40px;
+    margin:1rem;
 }
