--- a/src/JokeBox.css
+++ b/src/JokeBox.css
@@ -6,14 +6,33 @@
 }
 .JokeBox-btnDiv{
     width: 20rem;
-    background-color: darkorchid;
+    background-color:rgb(142 116 205);
     height: 750px;
-
+    box-shadow: 1px 4px 9px 0px #7d7d7dc9, 1px 6px 12px 3px #a3a3a36e, 1px 8px 20px 8px #cfcfcf;
+    z-index: 1;
 }
 .JokeList{
     height: 700px;
     width: 52rem;
-    background-color: cadetblue;
+    background-color: #f5f5f5;
     overflow: auto;
     margin: auto;
+    box-shadow: 1px 4px 9px 0px #7d7d7dc9, 1px 6px 12px 3px #a3a3a36e, 1px 8px 20px 8px #cfcfcf;
+}
+
+.heading{
+    margin-top: 10rem;
+}
+.smiley{
+    display: block;
+    margin: 2rem auto;
+    font-size: 130px;
+}
+.JokeBox-btnDiv button{
+    height: 4em;
+    width: 12em;
+    border-radius: 3em;
+    background-color: #87f3ff;
+    border: none;
+    
 }
