--- a/src/JokeBox.css
+++ b/src/JokeBox.css
@@ -1,20 +1,22 @@
 .JokeBox {
     display: flex;
-    width: 90%;
+    width: 80%;
     justify-content: center;
     margin: 0rem auto;
     padding-top: 6rem;
-}
-.JokeBox-btnDiv{
-    width: 20rem;
-    background-color:rgb(142 116 205);
     height: 750px;
+
+}
+.JokeBox-sidebar{
+    width: 35%;
+    background-color:rgb(142 116 205);
+    /* height: 750px; */
     box-shadow: 1px 2px 11px 0px #0e0e0e42, 1px 3px 10px 0px #2929298a, 1px 5px 20px 5px #434343a3;
     z-index: 1;
 }
 .JokeList{
     height: 700px;
-    width: 52rem;
+    width: 80%;
     background-color: #f5f5f5;
     overflow: auto;
     margin: auto;
@@ -22,18 +24,35 @@
 }
 
 .heading{
-    margin-top: 10rem;
+    font-size: 50px;
+    color: white;
+    margin-top: 12rem;
+    font-family: 'Rubik', sans-serif;
+    word-spacing: 10px;
+}
+.heading span{
+    letter-spacing: 4px;
+    font-family: 'Amatic SC', cursive;
 }
 .smiley{
     display: block;
     margin: 2rem auto;
     font-size: 130px;
+    margin-top: 3rem;
 }
-.JokeBox-btnDiv button{
-    height: 4em;
-    width: 12em;
-    border-radius: 3em;
-    background-color: #87f3ff;
+.getMore-btn{
+    height: 8%;
+    width: 50%;
+    border-radius: 1em;
     border: none;
-    
+    box-shadow: 0px 4px 9px 0px #2f2f2f99, 0px 7px 20px 0px #4f4f4f;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.4rem;
+    cursor: pointer;
+    background: linear-gradient(305deg, rgba(226,95,144,1) 55%, rgba(143,211,255,1) 55%);;
+}
+.getMore-btn:hover{
+    transform: translate(1px,1px) ;
+    box-shadow: 0px 4px 16px 0px #2f2f2fa1, 0px 7px 20px 0px #4f4f4f;
 }
