--- a/src/JokeBox.css
+++ b/src/JokeBox.css
@@ -56,3 +56,11 @@
     transform: translate(1px,1px) ;
     box-shadow: 0px 4px 16px 0px #2f2f2fa1, 0px 7px 20px 0px #4f4f4f;
 }
+.JokeBox-spinner{
+    margin:15rem auto;
+    text-align: center;
+    color: rgb(81 60 30);
+}
+.JokeBox-spinner i{
+    color: rgb(255 154 0);
+}
